--- a/packages/array-queue/package.json
+++ b/packages/array-queue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jianghe/array-queue",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "private": false,
   "description": "数据结构-队列（数组）",
   "authors": [
@@ -26,7 +26,7 @@
     "url": "https://github.com/372623460jh/data-structure.git"
   },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org",
+    "registry": "https://npm.pkg.github.com/372623460jh",
     "access": "public"
   },
   "scripts": {},
