--- a/packages/array-queue/package.json
+++ b/packages/array-queue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jianghe/array-queue",
-  "version": "1.0.2",
+  "version": "1.0.2-0",
   "private": false,
   "description": "数据结构-队列（数组）",
   "authors": [
